// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon demo -- customStyle 1`] = `
.c0 {
  vertical-align: baseline;
}

<div>
  <i
    class="uc-fe-icon icon__link c0"
    style="margin-right:10px;"
    type="link"
  />
  <i
    class="test_cls uc-fe-icon icon__link c0"
    style="color:red;font-size:20px;"
    type="link"
  />
</div>
`;

exports[`Icon demo -- icon 1`] = `
.c11 {
  vertical-align: baseline;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c10 {
  margin-right: 8px;
  font-size: 14px;
}

.c8 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c8 .c9 {
  color: #4074e1;
}

.c12 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c6 {
  position: relative;
  margin-bottom: -8px;
}

.c6 .c7,
.c6 .style__RadioTagWrap-sc-25j3mq-3,
.c6 .style__RadioCardWrap-sc-25j3mq-8 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-sc-25j3mq-3:last-child,
.c6 .style__RadioCardWrap-sc-25j3mq-8:last-child {
  margin-right: 0;
}

.c6 .c32+.c32 {
  margin-left: -1px;
}

.c6 .c31 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c6 .c31:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .c31:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c15 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c17 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c20 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c22 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c13 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c13:hover {
  border-color: #4683e6;
}

.c13 .c19 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c13 .c21 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c13 .c14 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c13 .c16,
.c13 .c18 {
  line-height: 16px;
}

.c13 .c16 {
  padding-right: 20px;
}

.c13 .c18 {
  padding-left: 20px;
}

.c13 .c16 {
  display: none;
}

.c28 {
  position: relative;
}

.c30 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c25 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
}

.c27 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
  cursor: not-allowed;
  pointer-events: none;
  color: #bbb;
}

.c23 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c23 .c29 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c23 .c29::-webkit-input-placeholder {
  color: #abb4c3;
}

.c23 .c29::-moz-placeholder {
  color: #abb4c3;
}

.c23 .c29:-ms-input-placeholder {
  color: #abb4c3;
}

.c23 .c29::placeholder {
  color: #abb4c3;
}

.c23:hover {
  border-color: #4683e6;
}

.c23 .c29 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c23 .c24,
.c23 .c26 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c23 .c24:hover,
.c23 .c26:hover {
  color: #4074e1;
}

.c23 .c24 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c23 .c26 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

<div>
  <form
    class="demo-form uc-fe-form "
  >
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        type
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            checked=""
            class="c7 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__cbox-ed c11"
              type="cbox-ed"
            />
            circle-fill
          </div>
          <div
            class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c12"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle c11"
              type="circle"
            />
            circle
          </div>
          <div
            class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c12"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle c11"
              type="circle"
            />
            loading
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        spin
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="c13"
        >
          <div
            class="c14 c15"
          >
            <span
              class="c16 c17"
            >
              ON
            </span>
            <span
              class="c18 c17"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        fontSize
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default c23"
        >
          <div>
            <span
              class="c24 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c25"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up c11"
                type="caret-up"
              />
            </span>
            <span
              class="c26 uc-fe-numberinput-handler-down uc-fe-numberinput-handler uc-fe-numberinput-handler-disabled c27"
              disabled=""
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down c11"
                type="caret-down"
              />
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap c28"
          >
            <input
              autocomplete="off"
              class="c29 uc-fe-numberinput-input c30"
              max="100"
              min="12"
              step="1"
              value="12"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        color
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <input
          type="color"
          value="#000"
        />
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <i
      class="uc-fe-icon icon__circle-fill c11"
      style="font-size:12px;color:#000;"
      type="circle-fill"
    />
  </div>
</div>
`;

exports[`Icon demo -- spin 1`] = `
.c0 {
  vertical-align: baseline;
}

.c0.c0.c0 {
  -webkit-animation: iVXCSc 1.2s infinite linear;
  animation: iVXCSc 1.2s infinite linear;
  line-height: normal;
}

<div>
  <i
    class="uc-fe-icon icon__link uc-fe-icon-spin c0"
    style="margin-right:10px;"
    type="link"
  />
  <i
    class="uc-fe-icon icon__check uc-fe-icon-spin c0"
    style="margin-right:10px;"
    type="check"
  />
  <i
    class="uc-fe-icon icon__circle-check uc-fe-icon-spin c0"
    style="margin-right:10px;"
    type="circle-check"
  />
  <i
    class="uc-fe-icon icon__arrow-left uc-fe-icon-spin c0"
    style="margin-right:10px;"
    type="arrow-left"
  />
  <i
    class="uc-fe-icon icon__checkbox uc-fe-icon-spin c0"
    style="margin-right:10px;"
    type="checkbox"
  />
  <i
    class="uc-fe-icon icon__loading uc-fe-icon-spin c0"
    style="margin-right:10px;"
    type="loading"
  />
</div>
`;

exports[`Icon demo -- type 1`] = `
.c0 {
  vertical-align: baseline;
}

<div>
  <i
    class="uc-fe-icon icon__link c0"
    style="margin-right:10px;"
    type="link"
  />
  <i
    class="uc-fe-icon icon__check c0"
    style="margin-right:10px;"
    type="check"
  />
  <i
    class="uc-fe-icon icon__circle-check c0"
    style="margin-right:10px;"
    type="circle-check"
  />
  <i
    class="uc-fe-icon icon__arrow-left c0"
    style="margin-right:10px;"
    type="arrow-left"
  />
  <i
    class="uc-fe-icon icon__checkbox c0"
    style="margin-right:10px;"
    type="checkbox"
  />
  <i
    class="uc-fe-icon icon__loading c0"
    style="margin-right:10px;"
    type="loading"
  />
</div>
`;
